--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "webpack-dev-server": "4.15.1"
   },
   "scripts": {
-    "demo": "yarn workspace @stoplight/elements-demo",
+    "demo": "yarn workspace @stoplight/elements-demo start",
     "elements": "yarn workspace @stoplight/elements",
     "elements-core": "yarn workspace @stoplight/elements-core",
     "elements-dev-portal": "yarn workspace @stoplight/elements-dev-portal",
@@ -107,12 +107,7 @@
       "eslint --fix"
     ]
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
-  },
+
   "config": {
     "commitizen": {
       "path": "node_modules/cz-conventional-changelog"
