--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "root",
   "private": true,
-  "homepage": "https://github.com/stoplightio/elements",
-  "bugs": "https://github.com/stoplightio/elements/issues",
-  "author": "Stoplight <support@stoplight.io>",
+  "homepage": "https://github.com/ipcian/elements",
+  "bugs": "https://github.com/ipcian/elements/issues",
+  "author": "jsyoon <jsyoon@engistech.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stoplightio/elements"
+    "url": "https://github.com/ipcian/elements"
   },
   "license": "Apache-2.0",
   "workspaces": [
@@ -66,20 +66,20 @@
     "webpack-dev-server": "4.15.1"
   },
   "scripts": {
-    "demo": "yarn workspace @stoplight/elements-demo start",
-    "elements": "yarn workspace @stoplight/elements",
-    "elements-core": "yarn workspace @stoplight/elements-core",
-    "elements-dev-portal": "yarn workspace @stoplight/elements-dev-portal",
-    "build": "yarn workspace @stoplight/elements-core build && concurrently -n elements,dev-portal \"yarn workspace @stoplight/elements build\" \"yarn workspace @stoplight/elements-dev-portal build\"",
-    "build.docs": "yarn workspace @stoplight/elements build.docs",
-    "postbuild": "yarn workspace @stoplight/elements test.packaging && yarn workspace @stoplight/elements-core test.packaging && yarn workspace @stoplight/elements-dev-portal test.packaging",
+    "demo": "yarn workspace @ipcian/elements-demo start",
+    "elements": "yarn workspace @ipcian/elements",
+    "elements-core": "yarn workspace @ipcian/elements-core",
+    "elements-dev-portal": "yarn workspace @ipcian/elements-dev-portal",
+    "build": "yarn workspace @ipcian/elements-core build && concurrently -n elements,dev-portal \"yarn workspace @ipcian/elements build\" \"yarn workspace @ipcian/elements-dev-portal build\"",
+    "build.docs": "yarn workspace @ipcian/elements build.docs",
+    "postbuild": "yarn workspace @ipcian/elements test.packaging && yarn workspace @ipcian/elements-core test.packaging && yarn workspace @ipcian/elements-dev-portal test.packaging",
     "lint": "eslint '{packages,examples}/*/src/**/*.{ts,tsx}'",
     "version": "lerna version --no-push",
     "release": "lerna publish from-package --yes --registry https://registry.npmjs.org",
-    "release.docs": "yarn workspace @stoplight/elements release.docs",
+    "release.docs": "yarn workspace @ipcian/elements release.docs",
     "type-check": "yarn workspaces run type-check",
-    "test": "yarn workspace @stoplight/elements test && yarn workspace @stoplight/elements-core test && yarn workspace @stoplight/elements-dev-portal test --passWithNoTests",
-    "test.prod": "yarn workspace @stoplight/elements test.prod && yarn workspace @stoplight/elements-core test.prod && yarn workspace @stoplight/elements-dev-portal test.prod --passWithNoTests",
+    "test": "yarn workspace @ipcian/elements test && yarn workspace @ipcian/elements-core test && yarn workspace @ipcian/elements-dev-portal test --passWithNoTests",
+    "test.prod": "yarn workspace @ipcian/elements test.prod && yarn workspace @ipcian/elements-core test.prod && yarn workspace @ipcian/elements-dev-portal test.prod --passWithNoTests",
     "prepublishOnly": "yarn build",
     "/// examples ///": "",
     "copy:angular": "mkdir examples-dev ; cp -a -v ./examples/angular ./examples-dev ; sh ./use-local-elements.sh angular",
