--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "private": false,
+  "private": true,
   "homepage": "https://github.com/ipcian/elements",
   "bugs": "https://github.com/ipcian/elements/issues",
   "author": "jsyoon <jsyoon@engistech.com>",
