Revert "[fixed] lerna 배포를 위한 prviate 값 변경"
This reverts commit 9f766e615517c9a31e14ba5c81f79a5fb1bb7175.

--- a/packages/elements-core/package.json
+++ b/packages/elements-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ipcian/elements-core",
-  "version": "1.0.1","private": true,
+  "version": "1.0.1",
   "sideEffects": [
     "web-components.min.js",
     "src/web-components/**",
